--- a/html/index.html
+++ b/html/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>ATND clone project</title>
 </head>
 <body>
-<form action="#" method=GET>
-	<input type="number">
-</form>
+	<header style="border: 1pt"> ヘッダ </header>
+	<form action="#" method=GET>
+		<input type="number">
+	</form>
+	<footer> フッタ </footer>
 </body>
 </html>
